Updated Swedish translation.
Updated templates and merged for main dpkg and scripts translations.
Updated Swedish main translation to 930t.
Updated Swedish manual page translation to 1383t.
Updated Swedish scripts translation to 482t.
Updated change log files where appropriate.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-02  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.po: Updated to 1383t.
+
 2007-12-17  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1342t0f41u.
