--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-19  Peter Karlsson  <peterk@debian.org>
+
+	* dpkg.pot: Regenerated.
+	* *.po: Merged with dpkg.pot.
+	* sv.po: Updated to 930t.
+
 2007-11-29  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
