Updated Spanish translation.
po/de.po: Updated to 930t

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,7 @@ dpkg (1.14.13) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Swedish (Peter Karlsson)
+  * Spanish (Javier Fernández-Sanguino Peña). Closes: #456984
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
