man/po/sv.po: fix some groff that lead to a build failure

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -1295,7 +1295,7 @@ msgid ""
 "significant part of the version number)."
 msgstr ""
 "Dpkg delar upp versionsnumret vid det sista bindestrecket i strängen (om "
-"sådant finns) för att bestämma I<uppströmsversion> och I<debianuppdatering. "
+"sådant finns) för att bestämma I<uppströmsversion> och I<debianuppdatering>. "
 "Om I<debianuppdatering> saknas räknas det som tidigare än om fältet "
 "existerar (men notera att I<debianuppdatering> är den minst signifikanta "
 "delen av versionsnumret)."
