--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-20  Raphael Hertzog  <hertzog@debian.org>
+
+	* sv.po: Fix some groff that lead to a build failure.
+
 2007-12-19  Peter Karlsson  <peterk@debian.org>
 
 	* dpkg.pot: Regenerated.
