Unfuzzy German scripts translation

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-17  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 255t0f227u.
+
 2007-12-19  Peter Karlsson  <peterk@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
