--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-12-19 09:36+0100\n"
-"PO-Revision-Date: 2007-12-17 21:52+0100\n"
+"PO-Revision-Date: 2007-12-21 17:23+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -320,7 +320,7 @@ msgstr ""
 "Copyright (C) 2007 Frank Lichtenheld"
 
 #: scripts/dpkg-buildpackage.pl:35
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "\n"
 "Usage: %s [<options> ...]\n"
@@ -378,8 +378,7 @@ msgstr ""
 "  -p<signier-Befehl>\n"
 "  -d             prüfe Bauabhängigkeiten und -konflikte nicht.\n"
 "  -D             prüfe Bauabhängigkeiten und -konflikte.\n"
-"  -j[<Nummer>]   Angabe der simultanen Jobs } an debian/rules "
-"weitergegeben.\n"
+"  -j[<Nummer>]   Angabe der simultanen Jobs } an debian/rules weitergegeben\n"
 "  -k<Schlüssel-ID>\n"
 "                 Schlüssel zum Signieren.\n"
 "  -sgpg          der Signier-Befehl wird wie GPG aufgerufen.\n"
@@ -387,9 +386,9 @@ msgstr ""
 "  -us            unsignierte Quellen.\n"
 "  -uc            unsignierte changes.\n"
 "  -a<Arch>       Debian-Architektur, für die gebaut wird (impliziert -d).\n"
-"  -b             nur binär, Quellen nicht bauen.      } auch weitergegeben "
-"an\n"
+"  -b             nur binär, Quellen nicht bauen.      } auch weitergegeben an\n"
 "  -B             nur binär, keine arch-indep-Dateien. } dpkg-genchanges\n"
+"  -A             nur binär, nur arch-indep-Dateien.   }\n"
 "  -S             nur Quellen, keine Binärdateien.     }\n"
 "  -t<System>     setze GNU-Systemtyp.                 } weitergegeben an \n"
 "                                                        dpkg-architecture\n"
@@ -637,7 +636,7 @@ msgstr ""
 "Copyright (C) 2000,2001 Wichert Akkerman."
 
 #: scripts/dpkg-genchanges.pl:96
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...]\n"
 "\n"
@@ -673,6 +672,8 @@ msgstr ""
 "  -b                       rein binärer Bau - keine Quelldateien.\n"
 "  -B                       Architektur-spezifisch - keine Quellen oder\n"
 "                           Architektur-unabhängigen Dateien.\n"
+"  -A                       nur Architektur-unabhängiges - keine Quellen oder\n"
+"                           Architektur-spezifischen Dateien\n"
 "  -S                       nur-Quellen-Upload.\n"
 "  -c<Steuerdatei>          erhalte Steuerinformationen aus dieser Datei.\n"
 "  -l<changelogdatei>       erhalte pro-Version-Informationen aus dieser "
@@ -702,9 +703,9 @@ msgstr ""
 
 #: scripts/dpkg-genchanges.pl:129 scripts/dpkg-genchanges.pl:132
 #: scripts/dpkg-genchanges.pl:136 scripts/dpkg-genchanges.pl:140
-#, fuzzy, perl-format
+#, perl-format
 msgid "cannot combine %s and -S"
-msgstr "kann %s und %s nicht kombinieren"
+msgstr "kann %s und -S nicht kombinieren"
 
 #: scripts/dpkg-genchanges.pl:134
 #, perl-format
@@ -714,10 +715,10 @@ msgstr ""
 "Pakete nicht ein"
 
 #: scripts/dpkg-genchanges.pl:138
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: arch-indep upload - not including arch-specific packages"
 msgstr ""
-"%s: architektur-spezifischer Upload - schließe architektur-unabhängige "
+"%s: architektur-unabhängiger Upload - schließe architektur-spezifische "
 "Pakete nicht ein"
 
 #: scripts/dpkg-genchanges.pl:185
@@ -792,9 +793,9 @@ msgid "missing Priority for source files"
 msgstr "fehlende Priorität für Quelldateien"
 
 #: scripts/dpkg-genchanges.pl:375
-#, fuzzy, perl-format
+#, perl-format
 msgid "cannot open .dsc file %s"
-msgstr "kann .dsc-Datei %s nicht öffnen: %s"
+msgstr "kann .dsc-Datei %s nicht öffnen"
 
 #: scripts/dpkg-genchanges.pl:378 scripts/dpkg-source.pl:824
 #, perl-format
