--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-22  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1347t0f36u.
+
 2007-11-02  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1383t.
