French translation update
fr.po: Updated to 930t

--- a/po/fr.po
+++ b/po/fr.po
@@ -4046,9 +4046,9 @@ msgid "failed to exec rm -rf"
 msgstr "impossible d'exécuter rm -rf"
 
 #: dpkg-deb/info.c:99
-#, fuzzy, c-format
+#, c-format
 msgid "realloc failed (%lu bytes)"
-msgstr "échec de « realloc » (%ld octets)"
+msgstr "échec de « realloc » (%lu octets)"
 
 #: dpkg-deb/info.c:108
 msgid "info_spew"
