--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,7 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Swedish (Peter Karlsson)
   * Spanish (Javier Fernández-Sanguino Peña). Closes: #456984
+  * French (Christian Perrier, as this was trivial).
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
