update-alternatives: Refactor code to use new checked_rm function

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-27  Guillem Jover  <guillem@debian.org>
+
+	* scripts/update-alternatives.pl (checked_rm): New function. Refactor
+	all code to use it instead of duped code.
+
 2007-12-26  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-source.pl: Provide a sane default $origtargz in all
