update-alternatives: Refactor code to use checked_symlink function

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-12-27  Guillem Jover  <guillem@debian.org>
 
+	* scripts/update-alternatives.pl: Refactor all code to use
+	checked_symlink instead of duped code.
+
+2007-12-27  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl (checked_rm): New function. Refactor
 	all code to use it instead of duped code.
 
