Ignore the man pages when building without NLS support
Closes: #457673

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,17 @@
+2007-12-24  Guillem Jover  <guillem@debian.org>
+
+	* Makefile.am (all-local): Rename to ...
+	(all-local-yes): ... this.
+	(clean-local): Rename to ...
+	(clean-local-yes): ... this.
+	(install-data-local): Rename to ...
+	(install-data-local-yes): ... this.
+	(uninstall-local): Rename to ...
+	(uninstall-local-yes): ... this.
+	(all-local, all-local-no, clean-local, clean-local-no): New targets.
+	(install-data-local, install-data-local-no): Likewise.
+	(uninstall-local, uninstall-local-no): Likewise.
+
 2007-12-22  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1347t0f36u.
