--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2007-12-27  Guillem Jover  <guillem@debian.org>
 
 	* scripts/update-alternatives.pl: Refactor all code to use
+	checked_mv instead of duped code.
+
+2007-12-27  Guillem Jover  <guillem@debian.org>
+
+	* scripts/update-alternatives.pl: Refactor all code to use
 	checked_symlink instead of duped code.
 
 2007-12-27  Guillem Jover  <guillem@debian.org>
