Add a changelog entry to close a bug that was already fixed in the tree
Concerns the fact that dpkg-gensymbols should not update the version info of a
deprecated symbol.

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,8 @@ dpkg (1.14.13) UNRELEASED; urgency=low
     meta-information. First field is Build-Depends-Package used to extract the
     version requirement possibly encoded in the Build-Depends field and make
     sure that the generated dependency is at least as strict as this one.
+  * Fix dpkg-gensymbols to not update version info of a deprecated symbol.
+    Closes: #457739
 
   [ Guillem Jover ]
   * Ignore the man pages when building without NLS support. Closes: #457673
