update-alternatives: Refactor duplicate code into new set_links function

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-12-27  Guillem Jover  <guillem@debian.org>
 
+	* scripts/update-alternatives.pl (set_links): New function.
+	(config_alternatives): Use set_links instead of duped code.
+	(set_alternatives): Likewise.
+
+2007-12-27  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl: Refactor all code to use
 	checked_mv instead of duped code.
 
