update-alternatives: Check for undefined values when reading from the db

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-12-27  Guillem Jover  <guillem@debian.org>
 
+	* scripts/update-alternatives.pl (gl): Use defined instead of length.
+
+2007-12-27  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl (set_links): New function.
 	(config_alternatives): Use set_links instead of duped code.
 	(set_alternatives): Likewise.
