--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,8 @@ dpkg (1.14.13) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Ignore the man pages when building without NLS support. Closes: #457673
+  * Fix perl warnings:
+    - Check for undefined values when reading from the alternative db.
 
   [ Updated dpkg translations ]
   * Swedish (Peter Karlsson)
