update-alternatives: Properly handle alternatives with inexistent slave links
Based on a patch by Daniel Leidert <daniel.leidert@wgdd.de>.
Closes: #76295, #246906, #433567, #451872, #220044, #392440, #441021
Closes: #443241

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-27  Daniel Leidert  <daniel.leidert@wgdd.de>
+            Guillem Jover  <guillem@debian.org>
+
+	* scripts/update-alternatives.pl: Refactor duplicate code into ...
+	(checked_alternative): ... here. New function.
+	(set_links): Call it.
+
 2007-12-27  Guillem Jover  <guillem@debian.org>
 
 	* scripts/update-alternatives.pl (gl): Use defined instead of length.
