dpkg-divert: Fail when diverting to a non existent directory
Closes: #245562

--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,8 @@ dpkg (1.14.13) UNRELEASED; urgency=low
     Closes: #76295, #246906, #433567, #451872, #220044, #392440, #441021
     Closes: #443241
     Based on a patch by Daniel Leidert <daniel.leidert@wgdd.de>.
+  * Fail when diverting to a non existent directory. Closes: #245562
+    Thanks to Flavio Stanchina <flavio@stanchina.net>.
 
   [ Updated dpkg translations ]
   * Swedish (Peter Karlsson)
