ChangeLog night watch

--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,7 @@ dpkg (1.14.13) UNRELEASED; urgency=low
     Based on a patch by Daniel Leidert <daniel.leidert@wgdd.de>.
   * Fail when diverting to a non existent directory. Closes: #245562
     Thanks to Flavio Stanchina <flavio@stanchina.net>.
+  * Refactor update-alternatives.
 
   [ Updated dpkg translations ]
   * Swedish (Peter Karlsson)
