--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,12 +1,28 @@
+2007-12-22  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Updated to 930t.
+
 2007-12-20  Raphael Hertzog  <hertzog@debian.org>
 
 	* sv.po: Fix some groff that lead to a build failure.
+
+2007-12-20  Kenshi Muto  <kmuto@debian.org>
+
+	* ja.po: Updated to 930t.
+
+2007-12-19  Javier Fernández-Sanguino Peña  <jfs@computer.org>
+
+	* es.po: Updated to 930t.
 
 2007-12-19  Peter Karlsson  <peterk@debian.org>
 
 	* dpkg.pot: Regenerated.
 	* *.po: Merged with dpkg.pot.
 	* sv.po: Updated to 930t.
+
+2007-12-13  Kenshi Muto  <kmuto@debian.org>
+
+	* ja.po: Updated 929t.
 
 2007-11-29  Guillem Jover  <guillem@debian.org>
 
