--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.13) UNRELEASED; urgency=low
+dpkg (1.14.13) unstable; urgency=low
 
   [ Frank Lichtenheld ]
   * Add an own manpage for Dpkg's version format. Mostly stolen
@@ -50,21 +50,21 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   * Refactor update-alternatives.
 
   [ Updated dpkg translations ]
-  * Swedish (Peter Karlsson)
-  * Spanish (Javier Fernández-Sanguino Peña). Closes: #456984
   * French (Christian Perrier, as this was trivial).
+  * Spanish (Javier Fernández-Sanguino Peña). Closes: #456984
+  * Swedish (Peter Karlsson).
 
   [ Updated man pages translations ]
-  * Swedish (Peter Karlsson)
-  * German (Helge Kreutzmann)
+  * German (Helge Kreutzmann).
+  * Swedish (Peter Karlsson).
 
   [ Updated scripts translations ]
-  * French (Frédéric Bothamy)
-  * Swedish (Peter Karlsson)
-  * German (Helge Kreutzmann)
+  * French (Frédéric Bothamy).
+  * German (Helge Kreutzmann).
   * Japanese (Kenshi Muto). Closes: #455841
+  * Swedish (Peter Karlsson).
 
- -- Frank Lichtenheld <djpig@debian.org>  Wed, 05 Dec 2007 15:05:56 +0100
+ -- Guillem Jover <guillem@debian.org>  Thu, 27 Dec 2007 09:16:45 +0200
 
 dpkg (1.14.12) unstable; urgency=low
 
