--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-12-27  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.14.14~.
+
+2007-12-27  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.14.13.
 
 2007-12-27  Flavio Stanchina  <flavio@stanchina.net>
