--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.14) UNRELEASED; urgency=low
+
+  * 
+
+ -- Guillem Jover <guillem@debian.org>  Thu, 27 Dec 2007 09:27:40 +0200
+
 dpkg (1.14.13) unstable; urgency=low
 
   [ Frank Lichtenheld ]
