--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.14.14) UNRELEASED; urgency=low
 
-  * 
+  [ Raphael Hertzog ]
+  * Fix override disparity: set priority of dselect to important.
 
  -- Guillem Jover <guillem@debian.org>  Thu, 27 Dec 2007 09:27:40 +0200
 
