Add libio-string-perl to Build-Depends

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
 dpkg (1.14.14) UNRELEASED; urgency=low
 
-  [ Raphael Hertzog ]
   * Fix override disparity: set priority of dselect to important.
+  * Add libio-string-perl to Build-Depends as it's needed by a non-regression
+    test (fix FTBFS, thus a quick upload).
 
- -- Guillem Jover <guillem@debian.org>  Thu, 27 Dec 2007 09:27:40 +0200
+ -- Raphael Hertzog <hertzog@debian.org>  Thu, 27 Dec 2007 11:20:38 +0100
 
 dpkg (1.14.13) unstable; urgency=low
 
