Make dpkg-dev depend on dpkg (>= 1.14.13) as dpkg-source needs the latest Dpkg.pm

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ dpkg (1.14.14) UNRELEASED; urgency=low
   * Fix override disparity: set priority of dselect to important.
   * Add libio-string-perl to Build-Depends as it's needed by a non-regression
     test (fix FTBFS, thus a quick upload).
+  * Make dpkg-dev depend on dpkg (>= 1.14.13) as the latest Dpkg.pm is needed
+    for dpkg-source.
 
  -- Raphael Hertzog <hertzog@debian.org>  Thu, 27 Dec 2007 11:20:38 +0100
 
