--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2007-12-27  Raphael Hertzog  <hertzog@debian.org>
+
+	* configure.ac: Release 1.14.14.
+
+2007-12-27  Raphael Hertzog  <hertzog@debian.org>
+
+	* debian/control: Bump dpkg dependency to >= 1.14.13 in dpkg-dev
+	as dpkg-source needs the latest Dpkg.pm.
+	* debian/control: Add libio-string-perl to Build-Depends as it's
+	needed for a non-regression test (200_Dpkg_Shlibs.t).
+	* debian/control: Fix priority of dselect to match the priority
+	set by ftpmasters.
+
 2007-12-27  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.14.14~.
