--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.14) UNRELEASED; urgency=low
+dpkg (1.14.14) unstable; urgency=low
 
   * Fix override disparity: set priority of dselect to important.
   * Add libio-string-perl to Build-Depends as it's needed by a non-regression
