--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-12-27  Raphael Hertzog  <hertzog@debian.org>
 
+	* configure.ac: Bump version to 1.14.15~.
+
+2007-12-27  Raphael Hertzog  <hertzog@debian.org>
+
 	* configure.ac: Release 1.14.14.
 
 2007-12-27  Raphael Hertzog  <hertzog@debian.org>
