--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.15) UNRELEASED; urgency=low
+
+  *
+
+ -- Raphael Hertzog <hertzog@debian.org>  Thu, 27 Dec 2007 12:21:57 +0100
+
 dpkg (1.14.14) unstable; urgency=low
 
   * Fix override disparity: set priority of dselect to important.
