--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ dpkg (1.14.15) UNRELEASED; urgency=low
 
   *
 
+  [ Updated man pages translations ]
+  * Swedish (Peter Karlsson).
+
  -- Raphael Hertzog <hertzog@debian.org>  Thu, 27 Dec 2007 12:21:57 +0100
 
 dpkg (1.14.14) unstable; urgency=low
