Dpkg::Shlibs::SymbolFile: Blacklist some armel specific symbols
Riku Voipio reported that the symbols __exidx_end and __exidx_start are
arm eabi internal symbols. Thus they have to be ignored by
dpkg-gensymbols.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   [ Raphael Hertzog ]
   * Make sure {dpkg-dev,dselect}.preinst are included in the source tarball.
     Closes: #452730
+  * Blacklist armel-specific symbols in dpkg-gensymbols. Reported by Riku
+    Voipio. Closes: #457964
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson).
