--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-12-27  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/Shlibs/SymbolFile.pm: Blacklist some armel specific
+	symbols (__exidx_end, __exidx_start).
+
+2007-12-27  Raphael Hertzog  <hertzog@debian.org>
+
 	* Makefile.am: Add some missing files in EXTRA_DIST. And add a
 	dist-hook rule to check that all files contained in the git
 	repository (except .gitignore) are included in the dist tarball.
